--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,45 @@
+absl-py==0.12.0
+appdirs==1.4.4
+black==20.8b1
+cachetools==4.2.1
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
 cloudpickle==1.6.0
+dataclasses==0.8
 future==0.18.2
+google-auth==1.28.0
+google-auth-oauthlib==0.4.3
+grpcio==1.36.1
 gym==0.18.0
--e git+git@github.com:yipsang/tetris-rl.git@2eee2605f074b19c0abb7e34b8e597b80e03ce46#egg=gym_matris&subdirectory=gym-matris
+-e gym-matris
+idna==2.10
+importlib-metadata==3.7.3
 KezMenu==0.2.1
+Markdown==3.3.4
+mypy-extensions==0.4.3
 numpy==1.19.5
+oauthlib==3.1.0
 opencv-python==4.5.1.48
+pathspec==0.8.1
 Pillow==7.2.0
+protobuf==3.15.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pygame==2.0.1
 pyglet==1.5.0
+regex==2021.3.17
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
 scipy==1.5.4
+six==1.15.0
+tensorboard==2.4.1
+tensorboard-plugin-wit==1.8.0
+toml==0.10.2
+torch==1.8.0
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
+urllib3==1.26.4
+Werkzeug==1.0.1
+zipp==3.4.1
